--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 
 [dev-dependencies]
+approx = "0.5.1"
 criterion = { version = "0.4.0" , features = [ "html_reports" ] }
 
 [[bench]]
